force-app/main/default/objects/Country__c/fields/alpha2Code__c.field-meta.xml
<CustomField>
    <fullName>alpha2Code__c</fullName>
    <description>Country alpha2Code</description>
    <inlineHelpText>Country alpha2Code</inlineHelpText>
    <label>alpha2Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>