force-app/main/default/objects/Country__c/fields/alpha3Code__c.field-meta.xml
<CustomField>
    <fullName>alpha3Code__c</fullName>
    <description>Country alpha3Code</description>
    <inlineHelpText>Country alpha3Code</inlineHelpText>
    <label>alpha3Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>