force-app/main/default/objects/Country__c/fields/capital__c.field-meta.xml
<CustomField>
    <fullName>capital__c</fullName>
    <label>Capital</label>
    <length>100</length>
    <type>Text</type>
</CustomField>