force-app/main/default/objects/Country__c/fields/Regional_Blocs__c.field-meta.xml
<CustomField>
    <fullName>Regional_Blocs__c</fullName>
    <label>Regional Blocs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WTO_acronyms</valueSetName>
    </valueSet>
</CustomField>